--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "next": "15.5.12",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
