--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "15.5.12",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
