--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
+    "react-gauge-component": "^2.0.26",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
