--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-gauge-component": "^2.0.26",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
