--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.3",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
+    "mathjs": "^14.9.1",
     "motion": "^12.34.0",
     "next": "15.5.12",
     "next-themes": "^0.4.6",
